--- a/src/Mzayad.Web/Views/Shared/_Layout_NavbarCart.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_NavbarCart.cshtml
@@ -4,6 +4,19 @@
     var shoppingCart = ViewBag.ShoppingCart as ShoppingCart;
 }
 
+@if (shoppingCart == null || !shoppingCart.Items.Any())
+{
+    <li class="visible-xs">
+        <a class="navbar-link" href="@Url.Action("Cart", "Shop", new {Area = ""})">@Global.ShoppingCart [0]</a>
+    </li>
+    <li class="dropdown hidden-xs">
+        <a href="#" class="navbar-link" >
+            @shoppingCart.Items.Sum(i => i.Quantity) <i class="fa fa-shopping-cart icon-shopping-cart"></i> <span>@Global.ShoppingCart</span>
+        </a>
+    </li>
+}
+
+
 @if (shoppingCart != null && shoppingCart.Items.Any())
 {
     <li class="visible-xs">
@@ -25,19 +38,19 @@
                                 </td>
                                 <td class="cart-item-product-name" colspan="5">@cartItem.Name</td>
                             </tr>
-                                <tr class="row-bottom">
-                                    <td class="fit-cell">
-                                        @Html.Raw(string.Format(Global.QuantityLabelWithValue, cartItem.Quantity))
-                                    </td>
-                                    <td></td>
-                                    <td class="fit-cell">
-                                        @Html.Raw(string.Format(Global.UnityLabelWithValue, CurrencyFormatter.Format(cartItem.ItemPrice)))
-                                    </td>
-                                    <td></td>
-                                    <td class="fit-cell">
-                                        @Html.Raw(string.Format(Global.TotalLabelWithValue, CurrencyFormatter.Format(cartItem.TotalPrice)))
-                                    </td>
-                                </tr>
+                            <tr class="row-bottom">
+                                <td class="fit-cell">
+                                    @Html.Raw(string.Format(Global.QuantityLabelWithValue, cartItem.Quantity))
+                                </td>
+                                <td></td>
+                                <td class="fit-cell">
+                                    @Html.Raw(string.Format(Global.UnityLabelWithValue, CurrencyFormatter.Format(cartItem.ItemPrice)))
+                                </td>
+                                <td></td>
+                                <td class="fit-cell">
+                                    @Html.Raw(string.Format(Global.TotalLabelWithValue, CurrencyFormatter.Format(cartItem.TotalPrice)))
+                                </td>
+                            </tr>
                         }
                     </tbody>
                 </table>
