--- a/src/Mzayad.Web/Views/Shop/Cart.cshtml
+++ b/src/Mzayad.Web/Views/Shop/Cart.cshtml
@@ -67,7 +67,7 @@
                     @CurrencyFormatter.Format(item.TotalPrice)
                 </td>
                 <td class="fit-cell">
-                    <button title="@Global.Remove" type="button" class="btn btn-link btn-remove-item"><i class="fa fa-times"></i></button>
+                    <button data-id="@item.ProductId" title="@Global.Remove" type="button" class="btn btn-link btn-remove-item"><i class="fa fa-times"></i></button>
                 </td>
             </tr>
         }
@@ -88,15 +88,11 @@
     <script>
         (function ($) {
 
-            var removeItemFromCart = function () {
-
-                var tr = $(this).parents("tr");
-                var productId = tr.find("input:hidden[name$='ProductId']").val();
-
+            var removeItemFromCart = function (id) {
                 $.ajax({
-                    url: '@Url.Action("RemoveItemFormCart", "Shop")',
+                    url: '@Url.Action("RemoveItemFormCart", "Shop")?productId=' + id,
                     type: "POST",
-                    data: { productId: productId },
+                    data: { productId: id },
                     success: function () {
                         location.reload();
                     }
@@ -104,7 +100,14 @@
             };
 
             $(function () {
-                $("#cart-table").on("click", ".btn-remove-item", removeItemFromCart);
+                $("#cart-table").on("click", ".btn-remove-item", function() {
+
+                    if (confirm("Are you sure you want to delete this item from shop bag?")) {
+                        var id = $(this).data("id");
+                        removeItemFromCart(id);
+                    }
+
+                });
             });
 
         })(jQuery);
