MZ-327 update shopping cart icon UI.

--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -211,9 +211,9 @@ body {
     img {
         background-color: #ccc;
         padding: 0;
-        margin:auto;
+        margin: auto;
         width: 100%;
-        display:inline-block;
+        display: inline-block;
     }
 }
 
@@ -382,9 +382,11 @@ body {
         text-decoration: underline;
     }
 }
-.hidden{
+
+.hidden {
     display: none;
 }
+
 #navbar-cart {
     padding: 20px;
     min-width: 420px;
@@ -429,7 +431,19 @@ body {
         margin-top: 10px;
         font-size: 18px;
     }
-    a.btn{
+
+    a.btn {
         color: #fff !important;
     }
+}
+
+.badge-shopping-cart {
+    position: absolute;
+    top: 7px;
+    left: 36px;
+    z-index: 10000;
+}
+
+.shopping-cart-link {
+    position: relative;
 }
