--- a/src/Mzayad.Web/Areas/admin/Views/Banners/_AddEditView.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Banners/_AddEditView.cshtml
@@ -23,6 +23,7 @@
             @Html.Label("Banner Image").Required()
             <input required="required" type="file" name="bannerImage" id="bannerImage" class="form-control" />
             @Html.ValidationMessage("bannerImage")
+            <div class="help-block">IMPORTANT: Please upload a banner image that is 1140 x 452 pixels.</div>
         </div>
     }
     else
@@ -33,6 +34,7 @@
                 <li id="image0">@Html.Partial("ImageUploader")</li>
             </ul>
             <div class="clearfix"></div>
+            <div class="help-block">IMPORTANT: Please upload a banner image that is 1140 x 452 pixels.</div>
         </div>
     }
     <div class="form-group">
