MZ-327 change circile background.

--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -425,6 +425,8 @@ body {
   top: 7px;
   left: 36px;
   z-index: 10000;
+  background-color: #f90000;
+  color: #fff;
 }
 .shopping-cart-link {
   position: relative;
