MZ-315 update upcoming auction UI.

--- a/src/Mzayad.Web/Content/site-auctions.less
+++ b/src/Mzayad.Web/Content/site-auctions.less
@@ -28,10 +28,15 @@
     }
 }
 
+.auction-tile-rounded {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
 .auction-tile {
     min-width: 0;
     border: 1px solid @lightgrey;
-    text-align: center;
+    text-align: center;    
 
     a {
         font-size: @font-size - 0.3 !important;
@@ -101,6 +106,8 @@
     background-color: @base;
     color: @white;
     padding: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 
     .duration {
         font-size: 13px;
