--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -801,6 +801,9 @@ input[type="checkbox"].input-validation-error {
 #home-index #auction-list .auction-item .auction-details .auction-action-buttons li a {
   font-size: 1.3rem !important;
 }
+.text-small {
+  font-size: 14px;
+}
 #closed-auctions {
   margin: 0 -10px 15px -10px;
   padding: 0;
@@ -824,6 +827,10 @@ input[type="checkbox"].input-validation-error {
   #closed-auctions li {
     width: 25%;
   }
+}
+.auction-tile-rounded {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 .auction-tile {
   min-width: 0;
@@ -886,6 +893,8 @@ input[type="checkbox"].input-validation-error {
   background-color: #33ace0;
   color: #fff;
   padding: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 .auction-coming-header .duration {
   font-size: 13px;
