--- a/src/Mzayad.Web/Views/User/Dashboard.cshtml
+++ b/src/Mzayad.Web/Views/User/Dashboard.cshtml
@@ -32,7 +32,9 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div id="dashboard-avatar">
-                        <img class="img-responsive" src="@Model.User.AvatarUrl" alt="@Model.User.UserName" />
+                        <a href="@Url.Action("EditProfile", "User")" title="@Global.ClickToEdit">
+                            <img class="img-responsive" src="@Model.User.AvatarUrl" alt="@Model.User.UserName" />
+                        </a>
                         @*<div class="text-center text-wight">
                             <a href="@Url.Action("MyAvatars", "User")">@Global.MyAvatars</a>
                         </div>*@
