--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/_AddEditAuction.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/_AddEditAuction.cshtml
@@ -26,7 +26,7 @@
                     @Html.ValidationMessageFor(i => i.Auction.ProductId, "Please select a product")
                     @Html.ValidationMessage("Product")
                 </div>
-                
+
                 <div class="form-group">
                     @Html.LabelFor(i => i.Auction.Title, "Title")
                     @Html.EditorFor(i => i.Auction.Title)
@@ -123,8 +123,15 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label>
+                                @Html.CheckBoxFor(i => i.Auction.AutoBidEnabled) Auto Bid Enabled
+                            </label>
+                        </div>
+                    </div>
                 </div>
-
+                
             </section>
             <section>
                 <div class="row">
@@ -146,7 +153,7 @@
                         <div class="form-group form-group-disableable">
                             @Html.LabelFor(i => i.Auction.BuyNowQuantity, "Buy Now Quantity")
                             <div class="input-group">
-                                @Html.TextBoxFor(i => i.Auction.BuyNowQuantity, new { @class = "form-control", @type = "number", @max=maxQuntity })
+                                @Html.TextBoxFor(i => i.Auction.BuyNowQuantity, new { @class = "form-control", @type = "number", @max = maxQuntity })
                                 <span class="input-group-addon">items</span>
                             </div>
                             @Html.ValidationMessageFor(i => i.Auction.BuyNowQuantity)
@@ -162,7 +169,7 @@
                         <div class="col-md-6">
                             <div class="checkbox">
                                 <label>
-                                    <input type="checkbox" class="country-list"  @(country.Selected ? "checked='checked'" : "") name="countryList" value="@country.Value" /> <i class="flag flag-@country.Value.ToLowerInvariant()"></i> @country.Text
+                                    <input type="checkbox" class="country-list" @(country.Selected ? "checked='checked'" : "") name="countryList" value="@country.Value" /> <i class="flag flag-@country.Value.ToLowerInvariant()"></i> @country.Text
                                 </label>
                             </div>
                         </div>
@@ -175,11 +182,10 @@
             </section>
 
             <section class="form-buttons">
-                @Html.HiddenFor(i=>i.Auction.CreatedByUserId)
+                @Html.HiddenFor(i => i.Auction.CreatedByUserId)
                 <button type="submit" class="btn btn-default">Save</button>
             </section>
 
         }
     </div>
 </div>
-
