MZ-315 update time minute digit.

--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
@@ -24,7 +24,7 @@ foreach (var country in countriesArray)
         <div class="auction-coming-header">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    @Model.StartUtc.ToString("dddd, dd MMMM @ h:m tt") <div class="text-small"><i class="fa fa-clock-o"></i> @Model.Duration @Global.Minutes</div>
+                    @Model.StartUtc.ToString("dddd, dd MMMM @ h:mm tt") <div class="text-small"><i class="fa fa-clock-o"></i> @Model.Duration @Global.Minutes</div>
                 </div>
                 @*<div class="col-md-8 pull-right text-right">
                     <div>
