--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
@@ -89,7 +89,7 @@ foreach (var country in countriesArray)
             <a class="btn btn-rounded btn-outline btn-unstyled" href="@Url.Action("Add", "WishList", new {item = HttpUtility.UrlEncode(Model.Title)})">@Global.AddToWishList</a>
         </div>
 
-        @if (Model.Status == AuctionType.Upcoming.ToString())
+        @if (Model.Status == AuctionType.Upcoming.ToString() && Model.AutoBidEnabled)
         {
             <div class="auction-tile-row">
                 <a class="btn btn-rounded btn-outline btn-unstyled" href="@Url.Action("Edit", "AutoBid", new {auctionId = Model.AuctionId})">@Global.SetAutoBid</a>
