MZ-362 fic Utc Date.

--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
@@ -35,7 +35,7 @@
     {
         columns.Bound(i => i.Title).Title("Title");
         columns.Bound(i => i.Status).ClientTemplate("#= getLabel(data) #");
-        columns.Bound(i => i.StartUtc).Format("{0:dd/MM/yyyy h:mm tt}").Title("Start");
+        columns.Bound(i => i.StartUtc).Format("{0:dd/MM/yyyy HH:mm}").Title("Start");
         columns.Bound(i => i.Duration).Format("{0} minutes");
         columns.Bound(i => i.BuyNowEnabled).Title("Buy Now").ClientTemplate("#= KendoFormatter.getYesNo(data.BuyNowEnabled) #");
         columns.LinkColumn("Auto Bids", "auctions/#=AuctionId#/auto-bids");
