MZ-343 adding push notifications

--- a/src/Mzayad.Web/Views/Shared/_Layout_AdminMenu.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_AdminMenu.cshtml
@@ -13,6 +13,7 @@
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Categories", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Specifications", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-reorder"></i>Specifications</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Sponsors", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-money"></i>Sponsors</a></li>
+            <li><a href="@Url.Action("Send", "Notifications", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-paper-plane"></i>Notifications</a></li>
             <li><a disabled href="#"><i class="fa fa-fw fa-pad-right fa-gamepad"></i>Gamification</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Trophies", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-trophy"></i>Trophies</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Levels", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-line-chart"></i>Levels</a></li>
