--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@Html.PageTitle()</title>
+    <title>@Html.PageTitle(SiteTitle)</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css" />
@@ -22,7 +22,7 @@
     }
 
     <div class="container">
-        <a href="@Url.Action("Index", "Home", routeValues)" class="navbar-brand"><img src="https://az723232.vo.msecnd.net/assets/zeedli-logo-web-636279368563125419.svg" alt="Zeedli" style="width: 150px;" /></a>
+        <a href="@Url.Action("Index", "Home", routeValues)" class="navbar-brand"><img src="/Images/Logo-Orginal.jpeg" alt="Zeedli" style="width: 150px;" /></a>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -68,7 +68,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p lang="en">&copy; Zeedli</p>
+            <p lang="en">&copy;  Mazadaty</p>
         </footer>
     </div>
     @Scripts.Render("~/js/jquery")
