--- a/src/Mzayad.Web/Views/Pages/Index.cshtml
+++ b/src/Mzayad.Web/Views/Pages/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model OrangeJetpack.Cms.Models.Page
+﻿@model Mzayad.Models.Page
 
 @{
     ViewBag.Title = Model.Title;
 }
 
-@Html.Raw(Model.Html)
+@Html.Raw(Model.Content)
 
