--- a/src/Mzayad.Web/Areas/admin/Views/PageManagement/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/PageManagement/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Mzayad.Web.Extensions
+﻿@using Mzayad.Models.Enums
+@using Mzayad.Web.Extensions
 @using OrangeJetpack.Cms.Models
 @model Mzayad.Web.Areas.Admin.Models.Pages.AddEditViewModel
 @{
@@ -18,7 +19,7 @@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Page.Title, "Title").Required()
-                @Html.EditorFor(model => model.Page.Title)
+                @Html.TextBoxFor(model => model.Page.Title, new {@class="form-control"})
             </div>
 
             <div class="form-group">
@@ -27,10 +28,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Page.Slug, "URL")
+                @Html.LabelFor(model => model.Page.PageTag, "URL")
                 <div class="input-group">
                     <span class="input-group-addon">/pages/</span>
-                    @Html.TextBoxFor(model => model.Page.Slug, new {@class = "form-control"})
+                    @Html.TextBoxFor(model => model.Page.PageTag, new {@class = "form-control"})
                 </div>
             </div>
 
@@ -38,21 +39,21 @@
                 @Html.LabelFor(model => model.Page.Status, "Status")
                 <div class="radio">
                     <label>
-                        @Html.RadioButtonFor(s => s.Page.Status, ItemStatus.Public)
+                        @Html.RadioButtonFor(s => s.Page.Status, PageStatus.Pupblic)
                         <strong class="text-success">Public</strong> <small>&mdash; Page is public and visible to all website users</small>
                     </label>
                 </div>
                 <div class="radio">
                     <label>
-                        @Html.RadioButtonFor(s => s.Page.Status, ItemStatus.Private)
+                        @Html.RadioButtonFor(s => s.Page.Status, PageStatus.Private)
                         <strong class="text-danger">Private</strong> <small>&mdash; Page is unpublished and NOT visible to users</small>
                     </label>
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Page.Html, "Content").Required()
-                @Html.EditorFor(model => model.Page.Html)
+                @Html.LabelFor(model => model.Page.Content, "Content").Required()
+                @Html.TextAreaFor(model => model.Page.Content, new {@class= "form-control ckeditor" })
             </div>
 
         </section>
